# SPECTRE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: DOCUMENTATION.md
manuscript/: REFERENCES.md
src/ethereum/: __init__.py
src/ethereum/common/: __init__.py  types.py
src/ethereum/frontier/: __init__.py  fork.py
src/ethereum/frontier/vm/: __init__.py  gas.py  interpreter.py  memory.py  stack.py
src/ethereum/homestead/: __init__.py  fork.py
src/ethereum/homestead/vm/: __init__.py  interpreter.py
src/ethereum/shanghai/: __init__.py  fork.py
src/ethereum/shanghai/vm/: __init__.py  interpreter.py
src/spectre/: __init__.py  cli.py
src/spectre/adversary/: __init__.py  analyzer.py  generator.py  strategies.py
src/spectre/mutant/: __init__.py  engine.py  operators.py  report.py
src/spectre/phantom/: __init__.py  executor.py  generator.py  minimizer.py
tests/: __init__.py  conftest.py
tests/frontier/: __init__.py  test_arithmetic.py  test_control_flow.py  test_gas.py  test_stack_ops.py  test_state_transition.py  test_storage.py
tests/homestead/: __init__.py  test_eip2.py
tests/shanghai/: __init__.py  test_eip3855_push0.py
tests/spectre/: __init__.py  test_adversary.py  test_mutant.py  test_phantom.py
